--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.36.2",
+    "allure-playwright": "^2.9.2",
     "expect-playwright": "^0.8.0"
   }
 }
